--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -1,59 +1,31 @@
-name: Android Build
-
-on:
-  push:
-    branches:
-     - main
-  workflow_dispatch:
+name: Build
+on: [push,pull_request]
 
 jobs:
-  build:
+  build_android:
+    name: Build for Android
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build for arm64-v8a
-        env:
-          APP_ANDROID_ARCHS: arm64-v8a
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer_arm64-v8a
-      
-      - uses: jungwinter/split@v2
-        id: split_arm64-v8a
+        uses: actions/checkout@v2
+        
+      - name: Buildozer action
+        # You may pin to the exact commit or the version.
+        # uses: ArtemSBulgakov/buildozer-action@5939413afbe1640f71dc6e0d93459210f3d38fca
+        uses: ArtemSBulgakov/buildozer-action@v1.1.3
+        id: buildozer
         with:
-          msg: ${{ steps.buildozer_arm64-v8a.outputs.filename }}
-          separator: "/"
-
-      - name: Upload arm64-v8a artifacts
+          # Command to start Buildozer. Set to `buildozer ios debug` for iOS
+          command: buildozer android debug
+          # Path to cloned repository. Set if you specified path for `actions/checkout` action.
+          repository_root: .
+          # Working directory where buildozer.spec is located. Set to `src` if buildozer.spec is in `src` directory
+          #workdir: ../../.
+          # Version of Buildozer to install. By default installs latest release
+          buildozer_version: stable
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ steps.split_arm64-v8a.outputs._1 }}
-          path: ${{ steps.buildozer_arm64-v8a.outputs.filename }}
-
-#name: Build
-#on:
-#  push:
-#
-#jobs:
-# Build job. Builds app for Android with Buildozer
-#  build-android:
-#    name: Build for Android
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#
-#      - name: Build with Buildozer
-#        uses: ArtemSBulgakov/buildozer-action@v1
-#        id: buildozer
-#        with:
-#          workdir: <specify the directory of the app no don't mention this the app files are in root directory>
-#          buildozer_version: stable
-#
-#      - name: Upload artifacts
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: package
-#          path: ${{ steps.buildozer.outputs.filename }}
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
