--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -21,11 +21,11 @@ jobs:
           # Path to cloned repository. Set if you specified path for `actions/checkout` action.
           repository_root: .
           # Working directory where buildozer.spec is located. Set to `src` if buildozer.spec is in `src` directory
-          workdir: src
+          workdir: .
           # Version of Buildozer to install. By default installs latest release
           buildozer_version: stable
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: package
           path: ${{ steps.buildozer.outputs.filename }}
