--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           run: mkdir -p artifact
-      - run: echo hello > artifact/BookShelf.txt
+      - run: echo hello > BookShelf.txt
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
           name: BookShelf
-          path: artifact/BookShelf.txt
+          path: BookShelf.txt
     
     #steps:
       - name: Checkout
