--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -1,43 +1,25 @@
 name: Build
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
-  build_android:
+  # Build job. Builds app for Android with Buildozer
+  build-android:
     name: Build for Android
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          run: mkdir -p artifact
-      - run: echo hello > BookShelf.txt
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: BookShelf
-          path: BookShelf.txt
-    
-    #steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Buildozer action
-        # You may pin to the exact commit or the version.
-        # uses: ArtemSBulgakov/buildozer-action@5939413afbe1640f71dc6e0d93459210f3d38fca
-        uses: ArtemSBulgakov/buildozer-action@v1.1.3
+
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          # Command to start Buildozer. Set to `buildozer ios debug` for iOS
-          command: buildozer android debug
-          # Path to cloned repository. Set if you specified path for `actions/checkout` action.
-          repository_root: .
-          # Working directory where buildozer.spec is located. Set to `src` if buildozer.spec is in `src` directory
-          workdir: .
-          # Version of Buildozer to install. By default installs latest release
+          workdir: bookshelf
           buildozer_version: stable
+
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
-          name: package
+          name: bookshelf
           path: ${{ steps.buildozer.outputs.filename }}
