--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -15,11 +15,12 @@ jobs:
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          workdir: .
+          command: buildozer android debug
+          workdir: src
           buildozer_version: stable
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: bookshelf
+          name: package
           path: ${{ steps.buildozer.outputs.filename }}
