--- a/.github/workflows/bookshelf_apk.yml
+++ b/.github/workflows/bookshelf_apk.yml
@@ -16,7 +16,7 @@ jobs:
         id: buildozer
         with:
           command: buildozer android debug
-          workdir: src
+          workdir: .
           buildozer_version: stable
 
       - name: Upload artifacts
